# sofs18-fileSystem

doc/: Doxyfile
include/: .gitignore  bin_dal.h  bin_direntries.h  bin_fileblocks.h  bin_freelists.h  bin_mksofs.h  bin_syscalls.h
lib/: .gitignore
src/: .gitignore  CMakeLists.txt
src/core/: .gitignore  CMakeLists.txt  bin_selection.cpp  bin_selection.h  blockviews.cpp  blockviews.h  core.h  direntry.h  exception.cpp  exception.h  inode.h  probing.cpp  probing.h  showblock.cpp  showsizes.cpp  superblock.h
src/dal/: .gitignore  CMakeLists.txt  dal.h  dal_DZ.cpp  dal_FBLT.cpp  dal_FILT.cpp  dal_IT.cpp  dal_OC.cpp  dal_SB.cpp  dal_inode.cpp
src/direntries/: .gitignore  CMakeLists.txt  add_direntry.cpp  check_dir_empty.cpp  delete_direntry.cpp  direntries.h  get_direntry.cpp  rename_direntry.cpp  traverse_path.cpp
src/fileblocks/: .gitignore  CMakeLists.txt  alloc_fileblock.cpp  fileblocks.h  free_fileblocks.cpp  get_fileblock.cpp  read_fileblock.cpp  write_fileblock.cpp
src/freelists/: .gitignore  CMakeLists.txt  alloc_block.cpp  alloc_inode.cpp  deplete_bicache.cpp  deplete_iicache.cpp  free_block.cpp  free_inode.cpp  freelists.h  replenish_brcache.cpp  replenish_ircache.cpp
src/mksofs/: .gitignore  CMakeLists.txt  mksofs.h  mksofs_CS.cpp  mksofs_FBLT.cpp  mksofs_FILT.cpp  mksofs_IT.cpp  mksofs_RC.cpp  mksofs_RD.cpp  mksofs_SB.cpp  mksofs_main.cpp
src/rawdisk/: .gitignore  CMakeLists.txt  rawdisk.cpp  rawdisk.h
src/sofsmount/: CMakeLists.txt  sofsmount.cpp
src/syscalls/: .gitignore  CMakeLists.txt  link.cpp  mkdir.cpp  mknod.cpp  read.cpp  readdir.cpp  readlink.cpp  rename.cpp  rmdir.cpp  symlink.cpp  syscalls.h  syscalls_others.cpp  truncate.cpp  unlink.cpp  write.cpp
src/testtool/: .gitignore  CMakeLists.txt  testtool.cpp  testtool.h  testtool_core.cpp  testtool_direntries.cpp  testtool_fileblocks.cpp  testtool_freelists.cpp  testtool_inodeattrs.cpp  testtool_msgs.cpp
src/work_src/: .gitignore  CMakeLists.txt
src/work_src/work_direntries/: .gitignore  CMakeLists.txt  work_add_direntry.cpp  work_check_dir_empty.cpp  work_delete_direntry.cpp  work_direntries.h  work_get_direntry.cpp  work_rename_direntry.cpp  work_traverse_path.cpp
src/work_src/work_fileblocks/: .gitignore  CMakeLists.txt  work_alloc_fileblock.cpp  work_fileblocks.h  work_free_fileblocks.cpp  work_get_fileblock.cpp  work_read_fileblock.cpp  work_write_fileblock.cpp
src/work_src/work_freelists/: .gitignore  CMakeLists.txt  work_alloc_block.cpp  work_alloc_inode.cpp  work_deplete_bicache.cpp  work_deplete_iicache.cpp  work_free_block.cpp  work_free_inode.cpp  work_freelists.h  work_replenish_brcache.cpp  work_replenish_ircache.cpp
src/work_src/work_mksofs/: .gitignore  CMakeLists.txt  work_mksofs.h  work_mksofs_CS.cpp  work_mksofs_FBLT.cpp  work_mksofs_FILT.cpp  work_mksofs_IT.cpp  work_mksofs_RC.cpp  work_mksofs_RD.cpp  work_mksofs_SB.cpp
